[package]
name = "asi-rs"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "asi_ccd"
path = "src/bin/ccd/main.rs"

[[bin]]
name = "test_camera"
path = "src/bin/test/main.rs"

[[bin]]
name = "asi_efw"
path = "src/bin/efw/main.rs"

[dependencies]
libc = "0.2"
env_logger = "0.11"
log = "0.4"
rfitsio = { git = "https://github.com/devducks/rfitsio", tag = "v0.3.0" }
num = "0.4"
astrotools = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "signal", "tracing"] }
convert_case = "0.11"
rand = "0.10"
libasi = { version = "0.2.0", path = "./libasi" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rumqttc = "0.21.0"
console-subscriber = "0.5"
base64 = "0.22.1"

[dependencies.uuid]
version = "1"
features = [
    "v4",
    "fast-rng",
]
