[package]
name = "asi-rs"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "asi_ccd"
path = "src/bin/ccd/main.rs"

[[bin]]
name = "test_camera"
path = "src/bin/test/main.rs"

[[bin]]
name = "asi_efw"
path = "src/bin/efw/main.rs"

[dependencies]
astrotools = "0.8"
base64 = "0.22.1"
console-subscriber = "0.5"
convert_case = "0.11"
env_logger = "0.11"
libasi = { version = "0.2.0", path = "./libasi" }
libc = "0.2"
log = "0.4"
num = "0.4"
rand = "0.10"
rfitsio = { git = "https://github.com/devducks/rfitsio", tag = "v0.3.0" }
rumqttc = "0.25.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["rt-multi-thread", "signal", "tracing"] }

[dependencies.uuid]
version = "1"
features = [
    "v4",
    "fast-rng",
]
